# Track2pClean

./: .jscpd.json  .mega-linter.yml  .pylintrc  CITATION.cff  README.md  osv-scanner.toml  probe_exception_alt.py  pyproject.toml  tmp-probe.py  tmp-underscore-validate.py
.github/: release-notes-instructions.md
benchmarks/: README-coherence-teacher-followups.md  bayescatrack_next_steps_manifest.json  coherence_teacher_action_specific.json  coherence_teacher_dynamic_confidence.json  coherence_teacher_minimal_followups.json  full_mht_growth_history_prediction_probe_manifest.json  full_mht_history_consistency_probe_manifest.json  full_mht_history_dynamics_probe_manifest.json  full_mht_identity_history_candidate_manifest.json  full_mht_identity_history_completion_manifest.json  full_mht_identity_history_method_lock.json  full_mht_identity_history_scan_pruning_manifest.json  full_mht_identity_history_sensitivity_manifest.json  full_mht_local_context_probe_manifest.json  full_mht_no_prior_continuation_probe_manifest.json  full_mht_prior_survival_sensitivity_manifest.json  full_mht_prior_veto_manifest.json  full_mht_scan_history_dynamics_probe_manifest.json  full_mht_terminal_completion_probe_manifest.json  pyrecest_cellgated_mht_reproduction_manifest.json  pyrecest_mht_deterministic_gating_ablation_manifest.json  run_track2p_coherence_teacher_cell_overlay_candidates.sh  run_track2p_dynamic_confidence_completion_rescue.sh  run_track2p_moderate_iou_teacher_fn_candidate.sh  run_track2p_residual_repair_candidates.sh  run_track2p_residual_union_action_specific_candidates.sh  run_track2p_residual_union_teacher_rescue_candidate.sh  run_track2p_seed_source_teacher_rescue_candidates.sh  teacher_seed_fn_rescue_candidate_notes.md  track2p_coherence_teacher_followup_manifest.json  track2p_missing_seed_teacher_rescue_manifest.md
docs/: advanced_result_improvements.md  architecture.md  benchmark-manifest-validation.md  consensus_cleanup_note.md  full_mht_calibrated_likelihood_notes.md  full_mht_growth_history_prediction.md  (+23 more)
(+1004 files in other folders)
