[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "Track2pClean"
version = "0.0.1"
description = "Track2p/Suite2p calcium-imaging track cleanup and benchmark toolkit"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy",
    "scipy",
    "scikit-image==0.24.0; python_version < '3.13'",
    "scikit-image>=0.25.2; python_version >= '3.13'",
    "pyrecest @ git+https://github.com/FlorianPfaff/PyRecEst.git@b08e94ad68ab073cf57a3932d56c0698c2de3f77",
]

[project.optional-dependencies]
calibration = [
    "scikit-learn",
]
track2p = [
    "track2p==0.6.2; python_version < '3.13'",
]

[project.scripts]
bayescatrack = "bayescatrack:main"
track2pclean = "track2pclean:main"

[project.urls]
Repository = "https://github.com/IPS-Stuttgart/BayesCaTrack"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
bayescatrack = ["configs/*.yaml", "py.typed"]
track2pclean = ["py.typed"]

[tool.poetry]
requires-poetry = ">=2.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.1.1"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
check_untyped_defs = true

[tool.ruff]
line-length = 180

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:mpmath.*",
    "ignore::scipy.optimize.OptimizeWarning",
]
[tool.pylint.MAIN]
py-version = "3.13"
fail-under = 10
ignore = ["CVS"]
ignored-modules = [
    "pyrecest.backend",
    "healpy",
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "useless-suppression",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "C",
  "W0221",
  "cyclic-import",
  "duplicate-code",
  "too-many-locals",
]

[tool.pylint.FORMAT]
max-line-length = 180

[tool.pylint.DESIGN]
max-args = 6
max-parents = 15
max-public-methods = 25
min-public-methods = 0
